force-app/main/default/objects/FieldInventory__c/FieldInventory__c.object-meta.xml
<CustomObject>
    <description>Catalog of org fields discovered by inventory refresh.</description>
    <label>Field Inventory</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Field Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>