force-app/main/default/objects/FieldInventory__c/fields/FieldKey__c.field-meta.xml
<CustomField>
    <fullName>FieldKey__c</fullName>
    <externalId>true</externalId>
    <label>Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>