force-app/main/default/objects/FieldInventory__c/fields/IncludedInScope__c.field-meta.xml
<CustomField>
    <fullName>IncludedInScope__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Included In Scope</label>
    <type>Checkbox</type>
</CustomField>