force-app/main/default/objects/FieldInventory__c/fields/IsCustomField__c.field-meta.xml
<CustomField>
    <fullName>IsCustomField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Field</label>
    <type>Checkbox</type>
</CustomField>