force-app/main/default/objects/FieldInventory__c/fields/LastScannedOn__c.field-meta.xml
<CustomField>
    <fullName>LastScannedOn__c</fullName>
    <label>Last Scanned On</label>
    <type>DateTime</type>
</CustomField>